added sorting by percentage

--- a/src/AppBundle/Resources/views/Home/404.html.twig
+++ b/src/AppBundle/Resources/views/Home/404.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}Error - 404{% endblock %}
+{% block title %}No results found{% endblock %}
 
 
 {% block body %}
@@ -14,5 +14,5 @@
             {{ success }}
         </div>
     {% endfor %}
-    <div class="titleN">Klausimas nerastas</div>
+    <div class="titleN">No results found</div>
 {% endblock %}
