--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -120,7 +120,7 @@ body {
   font-weight: bold;
 }
 
-#formCategories, #loginForm, #registerForm{
+#formCategories, .loginForm, .registerForm{
   display: none;
 }
 
