--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -7,61 +7,6 @@
 {% endblock %}
 
 {% block body %}
-    <!--login register forms-->
-    <div class="container allign-center">
-        <div class="row">
-            <div class="col-lg-4 col-lg-offset-4 col-sm-12 loginForm">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        Log in
-                    </div>
-                    <div class="panel-body">
-                        <form action="{{  path('login') }}" method="post" class="form-horizontal">
-                            <fieldset class="form-group">
-                                <label class="control-label label-width" for="username">User name: </label>
-                                <input type="text" id="username" name="_username" value="{# last_email #}" />
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <label class="control-label label-width" for="password">Password: </label>
-                                <input type="password" id="password" name="_password" />
-                            </fieldset>
-                            <button class="btn btn-4" type="submit">Log in</button>
-                        </form>
-
-                    </div>
-                    <div class="panel-footer">
-                        <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-lg-offset-4 col-sm-12 registerForm">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        Register
-                    </div>
-                    <div class="panel-body relative-button">
-                        <form action="{{  path('register') }}" method="post" class="form-horizontal">
-                            <fieldset class="form-group">
-                                <div><label for="user_username" class="required">Username</label><input type="text" id="user_username" name="user[username]" required="required" /></div>
-                                <div><label for="user_email" class="required">Email</label><input type="email" id="user_email" name="user[email]" required="required" /></div>
-                                <div><label for="user_name" class="required">Name</label><input type="text" id="user_name" name="user[name]" required="required" /></div>
-                                <div><label for="user_surname">Surname</label><input type="text" id="user_surname" name="user[surname]" /></div>
-                                <div><label for="user_password_first" class="required">First</label><input type="password" id="user_password_first" name="user[password][first]" required="required" /></div>
-                                <div><label for="user_password_second" class="required">Second</label><input type="password" id="user_password_second" name="user[password][second]" required="required" /></div>
-                                <div><label for="user_termsAccepted" class="required">Terms accepted</label><input type="checkbox" id="user_termsAccepted" name="user[termsAccepted]" required="required" value="1" /></div>
-
-                            </fieldset>
-                            <button class="btn btn-4" type="submit">Register!</button>
-
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
 
     <!--great cover-->
     <div class="homepage-hero-module ">
@@ -77,10 +22,10 @@
 
                 <div class="row bungeeS">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                        <a href="/" class="btn btn-1 btn-1e boldS">Zend test</a>
+                        <a href="{{ path('quick_test') }}" class="btn btn-1 btn-1e boldS">Zend test</a>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                        <a href="/" class="btn btn-1 btn-1e  boldS">
+                        <a href="{{ path('test_options') }}" class="btn btn-1 btn-1e  boldS">
                             Overal <br>
                             <span class="font-20">knowledge test</span>
                         </a>
