--- a/src/AppBundle/Resources/views/TestPages/question.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/question.html.twig
@@ -1,29 +1,33 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    {% for group in app.session.get('questionGroups') %}
-        <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
-            {% for question in group %}
-                {% if question.id == current.id %}
-                    <b><a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></b>
-                {% else %}
-                    <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
-                {% endif %}
-            {% endfor %}<br>
-        {% endfor %}
-    <div id="clock"></div>
-    {{ form_start(form) }}
-    {{ index ~ '.'}}{{ current.content|raw }}
+    <div class="grey-background">
+        <div class="container">
+            {% for group in app.session.get('questionGroups') %}
+                <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
+                    {% for question in group %}
+                        {% if question.id == current.id %}
+                            <b><a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></b>
+                        {% else %}
+                            <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
+                        {% endif %}
+                    {% endfor %}<br>
+                {% endfor %}
+            <div id="clock"></div>
+            {{ form_start(form) }}
+            {{ index ~ '.'}}{{ current.content|raw }}
 
-    {% for answer in form.answers %}
-        {{ loop.index }}{{ form_widget(answer) }}
-        {{ form_label(answer)|replace({"&lt;" : "<", "&gt;" : ">", "&amp;" : "&"})|raw }}
-        <br>
-    {% endfor %}
+            {% for answer in form.answers %}
+                {{ loop.index }}{{ form_widget(answer) }}
+                {{ form_label(answer)|replace({"&lt;" : "<", "&gt;" : ">", "&amp;" : "&"})|raw }}
+                <br>
+            {% endfor %}
 
-    {{ form_widget(form.previous) }}
-    {{ form_widget(form.next) }}
-    {{ form_end(form) }}
+            {{ form_widget(form.previous) }}
+            {{ form_widget(form.next) }}
+            {{ form_end(form) }}
+        </div>
+    </div>
 {% endblock %}
 {% block javascripts %}
     <!-- laikinai inportinu per src -->
