--- a/src/AppBundle/Resources/views/Home/failures.html.twig
+++ b/src/AppBundle/Resources/views/Home/failures.html.twig
@@ -130,5 +130,26 @@
             </div>
             </div>
         </div>
+
+    <pre class="language-php languege-markup line-numbers line line-highlight">
+                <code class="language-php">
+                    <xmp>
+                     <?php
+                        // Set session variables
+                        $_SESSION["favcolor"] = "green";
+                        $_SESSION["favanimal"] = "cat";
+                        echo "Session variables are set.";
+                     ?>
+                    </xmp>
+                    &lt;img src="example.png"&gt;
+                </code>
+                <code class="language-css">
+                    .example {
+                        font-family: Georgia, Times, serif;
+                        color: #555;
+                        text-align: center;
+                    }
+                </code>
+            </pre>
     </div>
 {% endblock %}
