--- a/src/AppBundle/Resources/views/TestPages/question.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/question.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% set charArray = {1 : 'A', 2 : 'B', 3 : 'C', 4 : 'D', 5 : 'E', 6 : 'F', 7 : 'G'}%}
+{% set charArray = {1 : 'A', 2 : 'B', 3 : 'C', 4 : 'D', 5 : 'E', 6 : 'F', 7 : 'G'} %}
 
 {% block body %}
     {% for group in app.session.get('questionGroups') %}
@@ -9,21 +9,28 @@
         {% else %}
             <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
         {% endif %}
-            {% for question in group %}
-                {% if question.id == current.id %}
-                    <b><a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></b>
-                {% else %}
-                    <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
-                {% endif %}
-            {% endfor %}<br>
-        {% endfor %}
-    <div id="clock"></div>
+        {% for question in group %}
+            {% if question.id == current.id %}
+                <b><a title="{{ question.title }}"
+                      href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></b>
+            {% else %}
+                <a title="{{ question.title }}" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
+            {% endif %}
+        {% endfor %}<br>
+    {% endfor %}
+
+    <div id="countdown">
+        <p class="hours">00</p>
+        <p class="minutes">00</p>
+        <p class="seconds">00</p>
+    </div>
+
     {{ form_start(form) }}
-    {{ index ~ '.'}}{{ current.content|raw }}
+    {{ index ~ '.' }}{{ current.content|raw }}
 
     {% for answer in form.answers %}
         <div class="alert">
-            {{ charArray[loop.index] }}{{  form_widget(answer) }}
+            {{ charArray[loop.index] }}{{ form_widget(answer) }}
             {{ form_label(answer)|replace({"&lt;" : "<", "&gt;" : ">", "&amp;" : "&"})|raw }}
         </div>
     {% endfor %}
@@ -34,52 +41,16 @@
     <input type="button" id="solve" value="Solve it">
 {% endblock %}
 {% block javascripts %}
-    <!-- laikinai inportinu per src -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="{{ asset('js/jquery.countdown.min.js') }}"></script>
+    <script src="{{ asset('js/script.js') }}"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("input[name='test_question[answers]']").on('change', function () {
-            var answer = $("input[name='test_question[answers]']:checked").val();
-            $.ajax({
-                type: "POST",
-                url: '{{ path('questionChosen') }}',
-                data: { 'question': {{ current.id }}, 'answer': answer }
-            });
+    <script type="text/javascript">
+
+        $("#countdown").countdown({
+            date: "{{ app.session.get('endsAt')|date('Y/m/d/H:i:s') }}",
+            format: "on"
         });
+        sendAnswers("input[name^='test_question[answers]']", '{{ path('questionChosen') }}', '{{ current.id }}');
+        solveQuestion($('#solve'), '{{ path('solveIt') }}', '{{ current.id }}', $('.alert input'));
 
-        $("input[name='test_question[answers][]']").on('change', function () {
-            var answers = [];
-            $("input[name='test_question[answers][]']:checked").each(function () {
-                answers.push($(this).val());
-            });
-            $.ajax({
-                type: "POST",
-                url: '{{ path('questionChosen') }}',
-                data: { 'question': {{ current.id }}, 'answer': answers }
-            });
-        });
-
-        $("#clock").countdown('{{ app.session.get('endsAt')|date('Y/m/d/H:i:s') }}', function(event) {
-                    $(this).text(
-                            event.strftime('%H:%M:%S')
-                    );
-                });
-     /*   sendAnswer("input[name='test_question[answers]']", { path('questionChosen') }}, { current.id }});
-        sendAnswers("input[name='test_question[answers]']", { path('questionChosen') }}, { current.id }});*/
-
-     $('#solve').on('click', function () {
-         $.ajax({
-             type: "POST",
-             url: '{{ path('solveIt') }}',
-             data: { 'question': {{ current.id }} },
-             success: function (data) {
-                 var correct = JSON.parse(data);
-                 console.log(correct.id);
-             }
-         });
-     });
-    });
-</script>
+    </script>
 {% endblock %}
