--- a/src/AppBundle/Resources/views/Home/leaderboard.html.twig
+++ b/src/AppBundle/Resources/views/Home/leaderboard.html.twig
@@ -6,27 +6,37 @@
     {{ parent() }}
 {% endblock %}
 
+
 {% block body %}
    <div class="container">
        {% if maxPages > 1 %}
            <ul class="pagination pagination-sm">
                {# `«` arrow  #}
                <li {{ thisPage == 1 ? 'class="disabled"' }}>
-                   <a href="{{ path('leaderboard', {page: thisPage-1 < 1 ? 1 : thisPage-1, order: app.request.get('order') }) }}">«</a>
+                   <a href="{{ path('leaderboard', {
+                       page: thisPage-1 < 1 ? 1 : thisPage-1,
+                       order: app.request.get('order'),
+                       direction: app.request.get('direction')}) }}">«</a>
                </li>
 
                {# Render each page number #}
                {% for i in 1..maxPages %}
                    {% if i - 6 < thisPage and i + 6 > thisPage %}
                    <li {{ thisPage == i ? 'class="active"' }}>
-                       <a href="{{ path('leaderboard', {page: i, order: app.request.get('order')}) }}">{{ i }}</a>
+                       <a href="{{ path('leaderboard', {
+                           page: i,
+                           order: app.request.get('order'),
+                           direction: app.request.get('direction')}) }}">{{ i }}</a>
                    </li>
                     {% endif %}
                {% endfor %}
 
                {# `»` arrow #}
                <li {{ thisPage == maxPages ? 'class="disabled"' }}>
-                   <a href="{{ path('leaderboard', {page: thisPage+1 <= maxPages ? thisPage+1 : thisPage, order: app.request.get('order') }) }}">»</a>
+                   <a href="{{ path('leaderboard', {
+                       page: thisPage+1 <= maxPages ? thisPage+1 : thisPage,
+                       order: app.request.get('order'),
+                       direction: app.request.get('direction') }) }}">»</a>
                </li>
            </ul>
        {% endif %}
@@ -35,20 +45,41 @@
            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4"><b>User</b></div>
            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
                <b>
-                   <a href="{{ path('leaderboard', {'page' : thisPage, 'order': 'correct' }) }}">
+                   <a href="{{ path('leaderboard', {
+                       'page' : thisPage,
+                       'order': 'correct' }) }}">
                        Correct answers
                    </a>
                </b>
            </div>
            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
                <b>
-                   <a href="{{ path('leaderboard', {'page' : thisPage, 'order': 'percentage' }) }}">
+                   <a href="{{ path('leaderboard', {
+                       'page' : thisPage,
+                       'order': 'percentage' }) }}">
                        Correct answer ratio
                    </a>
                </b>
            </div>
-           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4"><b>Incorrect answers</b></div>
-           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4"><b>Time spent</b></div>
+           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
+               <b>
+                   <a href="{{ path('leaderboard', {
+                       'page' : thisPage,
+                       'order': 'incorrect',
+                       'direction': 'ASC' }) }}">
+                       Incorrect answers
+                   </a>
+               </b>
+           </div>
+           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
+               <b>
+                   <a href="{{ path('leaderboard', {
+                       'page' : thisPage,
+                       'order': 'timeSpent' }) }}">
+                       Time spent
+                   </a>
+               </b>
+           </div>
        </div>
        {% set rank = 1 * (thisPage - 1) * limit %}
        {% for user in best %}
