--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -125,7 +125,7 @@ body {
 }
 
 .navbar{
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .user-count{
@@ -140,4 +140,23 @@ body {
 
 .position-topmost{
   z-index: 10000;
+}
+
+.alert{
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.dd66{
+  color: #66dd66;
+  font-size: 20px;
+}
+
+.color-background-text{
+  display: inline-block;
+  padding: 5px;
+  margin: 0 0 20px;
+}
+.color-background-text:hover{
+  background-color: yellow;
 }
