--- a/src/AppBundle/Resources/views/TestPages/question.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/question.html.twig
@@ -5,47 +5,50 @@
 {% block body %}
     <div class="grey-background">
         <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12">
+                    {% for group in app.session.get('questionGroups') %}
+                        {% if not group[0].book.title %}
+                            <h3><b>{{ loop.index ~ '. PHP Test' }}</b></h3>
+                        {% else %}
+                            <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
+                        {% endif %}
 
-            {% for group in app.session.get('questionGroups') %}
-                {% if not group[0].book.title %}
-                    <b>{{ loop.index ~ '. PHP Test' }}</b><br>
-                {% else %}
-                    <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
-                {% endif %}
+                        {% for question in group %}
+                            {% if question.id == current.id %}
+                                <b><a title="{{ question.title }}"
+                                     class="dd66 color-background-text" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></b>
+                            {% else %}
+                                <a title="{{ question.title }}"
+                                    class="dd66 color-background-text" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
+                            {% endif %}
+                        {% endfor %}<br>
+                    {% endfor %}
 
-                {% for question in group %}
-                    {% if question.id == current.id %}
-                        <b><a title="{{ question.title }}"
-                             href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></b>
-                    {% else %}
-                        <a title="{{ question.title }}"
-                            href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
-                    {% endif %}
-                {% endfor %}<br>
-            {% endfor %}
+                    <div id="countdown">
+                        <p id="hours">00</p>
+                        <p id="minutes">00</p>
+                        <p id="seconds">00</p>
+                    </div>
 
-            <div id="countdown">
-                <p id="hours">00</p>
-                <p id="minutes">00</p>
-                <p id="seconds">00</p>
-            </div>
-
-                {{ form_start(form) }}
-                {{ index ~ '.' }}{{ current.content|
-                replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
-                    "</pre>" : "</xmp></code></pre>" })|raw }}
-
-            {% for answer in form.answers %}
-                <div class="alert">
-                    {{ charArray[loop.index] }}{{ form_widget(answer) }}
-                    {{ form_label(answer)|raw}}
+                        {{ form_start(form) }}
+                        {{ index ~ '.' }}{{ current.content|
+                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
+                            "</pre>" : "</xmp></code></pre>" })|raw }}
+                    {% for answer in form.answers %}
+                        <div class="alert">
+                            {{ charArray[loop.index] }}{{ form_widget(answer) }}
+                            {{ form_label(answer)|raw}}
+                        </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
-
-            {{ form_widget(form.previous) }}
-            {{ form_widget(form.next) }}
-            {{ form_end(form) }}
-            <input type="button" id="solve" class="btn btn-2 btn-2a" value="Solve it">
+            </div>
+            <div class="allignCenter">
+                {{ form_widget(form.previous, {'attr': {'class': 'btn btn-3'}}) }} &nbsp;
+                {{ form_widget(form.next, {'attr': {'class': 'btn btn-3'}}) }} <br>
+                {{ form_widget(form.submit, {'attr': {'class': 'btn btn-3'}}) }} <br>
+                <input type="button" id="solve" class="btn btn-2 btn-2a" value="Solve it">
+            </div>
 
         </div>
     </div>
