--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -152,6 +152,11 @@ body {
   font-size: 20px;
 }
 
+.dd77{
+  color: red;
+  font-size: 20px;
+}
+
 .color-background-text{
   display: inline-block;
   padding: 5px;
