--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -25,6 +25,13 @@
                                 <label class="control-label label-width" for="password">Password: </label>
                                 <input type="password" id="password" name="_password" />
                             </fieldset>
+                            <fieldset>
+                                <label for="remember_me">Remember me</label>
+                                <input type="checkbox" id="remember_me" name="_remember_me" />
+                            </fieldset>
+
+                            <input type="hidden" name="_csrf_token"
+                                   value="{{ csrf_token('authenticate') }}">
                             <button class="btn btn-4" type="submit">Log in</button>
                         </form>
 
@@ -162,5 +169,5 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript">timedCounterCall(75);</script>
+    <script type="text/javascript">timedCounterCall({{ usercount }});</script>
 {% endblock %}
