--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -162,6 +162,10 @@ body {
   padding: 5px;
   margin: 0 0 20px;
 }
-.color-background-text:hover{
+.color-background-text:hover {
   background-color: yellow;
+}
+
+.margin-0{
+  margin: 0;
 }
