reworked authentication sy7stem with fosuserbundle and oauth bundle, added facebook ang google logins + kept old login/registration

--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -2,6 +2,15 @@
 
 {% block title %}AppBundle:SecurityController:login{% endblock %}
 
+
+
+
+
+
+
+
+
+<!-- TEMPLEITAS NENAUDOJAMAS !!!!!!!!!! -->
 {% block body %}
 <div class="container allign-center">
     <div class="row">
@@ -37,6 +46,7 @@
                 </div>
                 <div class="panel-footer">
                     <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
+                    <div class="text-center"><b><a href="/login/check-facebook">Login with Facebook!!!</a></b></div>
                 </div>
             </div>
         </div>
