--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -16,7 +16,7 @@
                         Log in
                     </div>
                     <div class="panel-body">
-                        <form action="{{  path('login') }}" method="post" class="form-horizontal">
+                     <!--   <form action="{  path('login') }}" method="post" class="form-horizontal">
                             <fieldset class="form-group">
                                 <label class="control-label label-width" for="username">User name: </label>
                                 <input type="text" id="username" name="_username" value="{# last_email #}" />
@@ -31,13 +31,14 @@
                             </fieldset>
 
                             <input type="hidden" name="_csrf_token"
-                                   value="{{ csrf_token('authenticate') }}">
+                                   value="{ csrf_token('authenticate') }}">
                             <button class="btn btn-4" type="submit">Log in</button>
-                        </form>
+                        </form> -->
 
                     </div>
                     <div class="panel-footer">
-                        <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
+                        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook' }) }}" alt="Sign in with Facebook">Sign in with Facebook</a><br>
+                        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google' }) }}" alt="Sign in with Google">Sign in with Google</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +49,7 @@
                         Register
                     </div>
                     <div class="panel-body relative-button">
-                        <form action="{{  path('register') }}" method="post" class="form-horizontal">
+                   <!--     <form action="{  path('register') }}" method="post" class="form-horizontal">
                             <fieldset class="form-group">
                                 <div><label for="user_username" class="required">Username</label><input type="text" id="user_username" name="user[username]" required="required" /></div>
                             </fieldset>
@@ -72,7 +73,7 @@
                             </fieldset>
                             <button class="btn btn-4" type="submit">Register!</button>
 
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
