--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -32,7 +32,7 @@
 
                             <input type="hidden" name="_csrf_token"
                                    value="{{ csrf_token('authenticate') }}">
-                            <button class="btn btn-4" type="submit">Log in</button>
+                            <button name="login_in_btn" class="btn btn-4" type="submit">Log in</button>
                         </form>
 
                     </div>
