--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -44,8 +44,8 @@
                         </ul>
                     {% else %}
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class="btn loginButton"{% if app.request.get('_route') != 'homepage' %}href="{{ path('login') }}"{% endif %}>Log in</a></li>
-                            <li><a class="btn registerButton" {% if app.request.get('_route') != 'homepage' %}href="{{ path('register') }}"{% endif %}>Sign up</a></li>
+                            <li><a class="btn loginButton margin-0"{% if app.request.get('_route') != 'homepage' %}href="{{ path('login') }}"{% endif %}>Log in</a></li>
+                            <li><a class="btn registerButton margin-0" {% if app.request.get('_route') != 'homepage' %}href="{{ path('register') }}"{% endif %}>Sign up</a></li>
                         </ul>
                     {% endif %}
             </div><!--/.nav-collapse -->
