html element <a> removed styling

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -153,8 +153,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2 class="bungeeS boldS font-20 allignCenter">Learn PHP</h2>
-                    <p><a href="http://php.net/docs.php">http://php.net/docs.php</a></p>
+                    <h2 class="bungeeS boldS font-20 allign-center"><a class="" href="http://php.net/docs.php">PHP documentation</a></h2>
+                    <h2 class="bungeeS boldS font-20 allign-center"><a class="" href="https://www.digitalocean.com/company/blog/getting-ready-for-php-7/">Getting Ready for PHP 7</a></h2>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 allignCenter">
                     <div class="bungeeS boldS font-20 ">
