--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -170,3 +170,11 @@ body {
 .margin-0{
   margin: 0 !important;
 }
+
+a {
+  color: black;
+  text-decoration: none; /* no underline */
+}
+a:hover{
+  color: black;
+}
